--- a/app.json
+++ b/app.json
@@ -4,10 +4,18 @@
     "slug": "Mechaniaid_Mobile",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/MechaniAid-Logo.png",
     "userInterfaceStyle": "light",
+    "plugins": [
+      [
+        "expo-location",
+        {
+          "locationAlwaysAndWhenInUsePermission": "Allow $(PRODUCT_NAME) to use your location."
+        }
+      ]
+    ],
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./assets/MechaniAid-Logo.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
@@ -19,12 +27,27 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
+        "foregroundImage": "./assets/MechaniAid-Logo.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.robbyyy.Mechaniaid_Mobile",
+      "config": {
+        "googleMaps": {
+          "apiKey": "AIzaSyDZ_UbY5_r_Weh_rMg0yJpSBPDT0M7T7i8"
+        }
+      },
+      "permissions": [
+        "android.permission.ACCESS_COARSE_LOCATION",
+        "android.permission.ACCESS_FINE_LOCATION"
+      ]
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "46fb1c38-dea0-4f72-ba4c-d1f20e8723c0"
+      }
     }
   }
 }
