--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@eva-design/eva": "^2.2.0",
     "@react-native-async-storage/async-storage": "1.21.0",
     "@react-native-masked-view/masked-view": "0.3.0",
+    "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/drawer": "^6.6.15",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
@@ -21,6 +22,7 @@
     "axios": "0.24",
     "expo": "~50.0.17",
     "expo-document-picker": "~11.10.1",
+    "expo-location": "~16.5.5",
     "expo-status-bar": "~1.11.1",
     "moment": "^2.30.1",
     "react": "18.2.0",
@@ -35,8 +37,7 @@
     "react-native-svg": "^15.3.0",
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
-    "toastify-react-native": "^5.0.0",
-    "expo-location": "~16.5.5"
+    "toastify-react-native": "^5.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
