--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "expo-document-picker": "~11.10.1",
     "expo-location": "~16.5.5",
     "expo-status-bar": "~1.11.1",
+    "geolib": "^3.3.4",
     "moment": "^2.30.1",
     "react": "18.2.0",
     "react-hook-form": "^7.51.5",
