--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@eva-design/eva": "^2.2.0",
+    "@pusher/pusher-websocket-react-native": "^1.3.1",
     "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-native-community/netinfo": "11.1.0",
     "@react-native-masked-view/masked-view": "0.3.0",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/drawer": "^6.6.15",
@@ -27,6 +29,7 @@
     "expo-status-bar": "~1.11.1",
     "geolib": "^3.3.4",
     "moment": "^2.30.1",
+    "pusher-js": "^8.4.0-rc2",
     "react": "18.2.0",
     "react-hook-form": "^7.51.5",
     "react-native": "0.73.6",
@@ -40,7 +43,9 @@
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
     "toastify-react-native": "^5.0.0",
-    "react-native-webview": "13.6.4"
+    "react-native-webview": "13.6.4",
+    "expo-device": "~5.9.4",
+    "expo-notifications": "~0.27.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
